@@ -1,6 +1,10 @@
 mod_proxy changes for httpd 2.0.23-dev
+
+  *) Fix the proxy when the origin server sends back a 100
+     Continue response.  [John Barbee <barbee@veribox.net>]
+
   *) Change 'readbytes' from apr_size_t to apr_off_t due to change
-     in ap_get_brigade's parameters [Barbee barbee@veribox.nbet]
+     in ap_get_brigade's parameters [John Barbee <barbee@veribox.net>]
 
 mod_proxy changes for httpd 2.0.20-dev
   *) Timeout added for backend connections.
